Added layout and fixed blog posts, now I have to fix syntax highlighter

--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
----
-title: DLion ~ About Me
----
-
 <!DOCTYPE html>
 <html>
     <head>
-    <title>{{site.name}} | {{ page.title }}</title>
+    <title>Domenico Luciani | DLion ~ About Me</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
-        <link href="{{ site.url }}/public/css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="/public/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
-        <link href="{{ site.url }}/public/css/page.css" rel="stylesheet" media="screen">
-        <link href="{{ site.url }}/public/css/home.css" rel="stylesheet" media="screen">
-        <link href="{{ site.url }}/public/css/about.css" rel="stylesheet" media="screen">
-        <link href="{{ site.url }}/public/css/skills.css" rel="stylesheet" media="screen">
-        <link href="{{ site.url }}/public/css/social.css" rel="stylesheet" media="screen">
+        <link href="/public/css/page.css" rel="stylesheet" media="screen">
+        <link href="/public/css/home.css" rel="stylesheet" media="screen">
+        <link href="/public/css/about.css" rel="stylesheet" media="screen">
+        <link href="/public/css/skills.css" rel="stylesheet" media="screen">
+        <link href="/public/css/social.css" rel="stylesheet" media="screen">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     </head>
     <body>
@@ -29,15 +25,12 @@ title: DLion ~ About Me
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">{{site.name}} | <strong>{{ page.title }}</strong></a>
+            <a class="navbar-brand" href="#">Domenico Luciani | <strong>DLion ~ About Me</strong></a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#social">Social</a></li>
-                <li><a href="{{site.url}}/blog">Blog</a></li>
+                <li><a href="/blog">Blog</a></li>
             </ul>
         </div>
         </nav>
@@ -46,7 +39,7 @@ title: DLion ~ About Me
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                      <img id="pic-me" class="img-responsive img-img-rounded" alt="me" src="{{site.url}}/public/img/pic.jpg"/>
+                      <img id="pic-me" class="img-responsive img-img-rounded" alt="me" src="/public/img/pic.jpg"/>
                     </div>
                     <div class="col-md-6 ">
                         <div id="hi">
@@ -239,14 +232,14 @@ title: DLion ~ About Me
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="{{site.url}}/public/js/jquery.min.js" type="text/javascript"></script>
+        <script src="/public/js/jquery.min.js" type="text/javascript"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="{{site.url}}/public/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="/public/js/bootstrap.min.js" type="text/javascript"></script>
         <!-- Skill Javascript Library !-->
-        <script src="{{site.url}}/public/js/raphael-min.js" type="text/javascript"></script>
+        <script src="/public/js/raphael-min.js" type="text/javascript"></script>
         <!-- My Skills Options file !-->
-        <script src="{{site.url}}/public/js/skills.js" type="text/javascript"></script>
+        <script src="/public/js/skills.js" type="text/javascript"></script>
         <!-- Maim javascript Function !-->
-        <script src="{{site.url}}/public/js/main.js" type="text/javascript"></script>
+        <script src="/public/js/main.js" type="text/javascript"></script>
     </body>
 </html>
