--- a/index.html
+++ b/index.html
@@ -61,10 +61,8 @@ title: DLion ~ Blog
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="{{site.url}}/public/js/bootstrap.min.js" type="text/javascript"></script>
         <!-- Skill Javascript Library !-->
-        <script src="{{site.url}}/public/js/raphael-min.js" type="text/javascript"></script>
+        <script src="{{site.url}}/public/js/raphael-min.js" type="text/javascript" async></script>
         <!-- My Skills Options file !-->
-        <script src="{{site.url}}/public/js/skills.js" type="text/javascript"></script>
-        <!-- Maim javascript Function !-->
-        <script src="{{site.url}}/public/js/main.js" type="text/javascript"></script>
+        <script src="{{site.url}}/public/js/skills.js" type="text/javascript" async></script>
     </body>
 </html>
