Added articles and fixed layout

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ title: DLion ~ Blog
                 <p class="data">{{ post.date | date_to_string }}</p>
               </div>
               <div class="col-lg-7 col-lg-offset-2">
-                <h3 class="title-post"><a class="url-post" href="{{ post.url }}">{{ post.title }}</a></h3>
+                <h3 class="title-post-out"><a class="url-post" href="{{ post.url }}">{{ post.title }}</a></h3>
               </div>
               <div class="col-lg-7 col-lg-offset-2 preview-articolo">{{ post.excerpt }}</div>
             </div>
