Added link to header

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ title: DLion ~ Blog
         <div id="blog-testata" class="page">
           <div class="row">
             <div class="col-xs-12">
-              <h1 class="text-center"><span class="site-name">Domenico Luciani</span> | <strong>DLion ~ Blog</strong></h1>
+              <h1 class="text-center"><span class="site-name"><a class="url-post" href="/">Domenico Luciani</a></span> | <strong>DLion ~ Blog</strong></h1>
             </div>
           </div>
         </div>
