--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@ title: DLion ~ Blog
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{{site.url}}/">Domenico Luciani | <strong>DLion ~ Blog</strong></a>
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{{site.url}}/">Domenico Luciani | <strong>DLion ~ Blog</strong></a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#">Blog</a></li>
-                <li><a href="{{ site.url }}/about">About</a></li>
-            </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#">Blog</a></li>
+            <li><a href="{{ site.url }}/about">About</a></li>
+          </ul>
         </div>
         </nav>
         </header>
@@ -71,5 +71,7 @@ title: DLion ~ Blog
             </div>
           </div>
         </div>
+        <script src="{{ site.url }}/public/js/jquery.min.js"></script>
+        <script src="{{ site.url }}/public/js/bootstrap.min.js"></script>
     </body>
 </html>
