--- a/about/index.html
+++ b/about/index.html
@@ -239,7 +239,15 @@
         <script src="/public/js/raphael-min.js" type="text/javascript"></script>
         <!-- My Skills Options file !-->
         <script src="/public/js/skills.js" type="text/javascript"></script>
-        <!-- Maim javascript Function !-->
+        <!-- Main javascript Function !-->
         <script src="/public/js/main.js" type="text/javascript"></script>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-40851910-1', 'dlion.it');
+          ga('send', 'pageview');
+        </script>
     </body>
 </html>
