--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ title: DLion ~ Blog
         <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
         <link href="{{ site.url }}/public/css/page.css" rel="stylesheet" media="screen">
         <link href="{{ site.url }}/public/css/blog.css" rel="stylesheet" media="screen">
+        <link rel="shortcut icon" href="{{site.url}}/favicon.ico"/>
     </head>
     <body>
         <header>
