--- a/about/index.html
+++ b/about/index.html
@@ -5,14 +5,14 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
-        <link href="/public/css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="{{site.url}}/public/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
-        <link href="/public/css/page.css" rel="stylesheet" media="screen">
-        <link href="/public/css/home.css" rel="stylesheet" media="screen">
-        <link href="/public/css/about.css" rel="stylesheet" media="screen">
-        <link href="/public/css/skills.css" rel="stylesheet" media="screen">
-        <link href="/public/css/social.css" rel="stylesheet" media="screen">
-        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <link href="{{site.url}}/public/css/page.css" rel="stylesheet" media="screen">
+        <link href="{{site.url}}/public/css/home.css" rel="stylesheet" media="screen">
+        <link href="{{site.url}}/public/css/about.css" rel="stylesheet" media="screen">
+        <link href="{{site.url}}/public/css/skills.css" rel="stylesheet" media="screen">
+        <link href="{{site.url}}/public/css/social.css" rel="stylesheet" media="screen">
+        <link href="{{site.url}}/public/css/font-awesome.min.css" rel="stylesheet">
     </head>
     <body>
         <header>
