--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Domenico Luciani | <strong>DLion ~ About Me</strong></a>
+            <a class="navbar-brand" href="/">Domenico Luciani | <strong>DLion ~ About Me</strong></a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav navbar-right">
