--- a/about/index.html
+++ b/about/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-EN" prefix="og: http://ogp.me/ns#">
     <head>
     <title>Domenico Luciani | DLion ~ About Me</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="author" href="https://plus.google.com/+DomenicoLeoneLuciani/posts"/>
+        <!-- SEO -->
+        <link rel="canonical" href="http://www.dlion.it/" />
+        <meta property="og:locale" content="en_EN" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Domenico Luciani | DLion ~ About Me" />
+        <meta property="og:description" content="About me" />
+        <meta property="og:url" content="{{site.url}}/about" />
+        <meta property="og:site_name" content="Domenico Luciani | DLion ~ About Me" />
+        <meta property="og:image" content="{{site.url}}/public/img/pic.jpg" />
+        <meta name="twitter:url" content="{{site.url}}{{page.url}}">
+        <!-- FINE SEO -->
         <!-- Bootstrap -->
         <link href="/public/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
