--- a/about/index.html
+++ b/about/index.html
@@ -6,15 +6,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="author" href="https://plus.google.com/+DomenicoLeoneLuciani/posts"/>
         <!-- SEO -->
-        <link rel="canonical" href="http://www.dlion.it/" />
-        <meta property="og:locale" content="en_EN" />
+        <link rel="canonical" href="{{site.url}}/about" />
+        <!-- Schema.org markup for Google+ -->
+        <meta itemprop="name" content="Domenico Luciani | DLion ~ About Me">
+        <meta itemprop="description" content="About Me">
+        <meta itemprop="image" content="{{site.url}}/public/img/pic.jpg">
+        <!-- Open Graph data -->
+        <meta property="og:locale" content="it_IT" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Domenico Luciani | DLion ~ About Me" />
-        <meta property="og:description" content="About me" />
+        <meta property="og:description" content="About Me" />
         <meta property="og:url" content="{{site.url}}/about" />
         <meta property="og:site_name" content="Domenico Luciani | DLion ~ About Me" />
         <meta property="og:image" content="{{site.url}}/public/img/pic.jpg" />
-        <meta name="twitter:url" content="{{site.url}}{{page.url}}">
+        <!-- Twitter Card data -->
+        <meta name="twitter:card" value="summary">
+        <meta name="twitter:site" content="Domenico Luciani | DLion ~ About Me">
+        <meta name="twitter:title" content="Domenico Luciani | DLion ~ About Me">
+        <meta name="twitter:description" content="About Me">
+        <meta name="twitter:creator" content="Domenico Luciani aka DLion">
+        <meta name="twitter:creator:id" content="dlion92">
+        <meta name="twitter:image:src" content="{{site.url}}/public/img/pic.jpg">
+        <meta name="twitter:domain" content="{{site.url}}">
+        <meta name="twitter:url" content="{{site.url}}/about">
         <!-- FINE SEO -->
         <!-- Bootstrap -->
         <link href="/public/css/bootstrap.min.css" rel="stylesheet" media="screen">
