--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-EN" prefix="og: http://ogp.me/ns#">
+<html lang="en-US" prefix="og: http://ogp.me/ns#">
     <head>
     <title>Domenico Luciani | DLion ~ About Me</title>
         <meta charset="utf-8">
@@ -12,7 +12,7 @@
         <meta itemprop="description" content="About Me">
         <meta itemprop="image" content="{{site.url}}/public/img/pic.jpg">
         <!-- Open Graph data -->
-        <meta property="og:locale" content="it_IT" />
+        <meta property="og:locale" content="en_US" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Domenico Luciani | DLion ~ About Me" />
         <meta property="og:description" content="About Me" />
