--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ title: DLion ~ Blog
         <meta property="og:image" content="{{site.url}}/public/img/pic.jpg" />
         <!-- Twitter Card data -->
         <meta name="twitter:card" value="summary">
-        <meta name="twitter:site" content="Domenico Luciani | DLion ~ Blog">
-        <meta name="twitter:title" content="Domenico Luciani | DLion ~ Blog">
+        <meta name="twitter:site" content="dlion92">
+        <meta name="twitter:title" content="dlion92">
         <meta name="twitter:description" content="Il Blog di Domenico Luciani aka DLion">
         <meta name="twitter:creator" content="Domenico Luciani aka DLion">
         <meta name="twitter:creator:id" content="dlion92">
