--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ title: DLion ~ Blog
         <!-- Twitter Card data -->
         <meta name="twitter:card" value="summary">
         <meta name="twitter:site" content="dlion92">
-        <meta name="twitter:title" content="dlion92">
+        <meta name="twitter:title" content="Domenico Luciani | DLion ~ Blog">
         <meta name="twitter:description" content="Il Blog di Domenico Luciani aka DLion">
-        <meta name="twitter:creator" content="Domenico Luciani aka DLion">
+        <meta name="twitter:creator" content="dlion92">
         <meta name="twitter:creator:id" content="dlion92">
         <meta name="twitter:image:src" content="{{site.url}}/public/img/pic.jpg">
         <meta name="twitter:domain" content="{{site.url}}">
