--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+title: DLion ~ Blog
+---
 <!DOCTYPE html>
 <html class="no-js" lang="it">
 <head>
@@ -47,36 +50,32 @@
     <nav class="top-bar" data-topbar>
         <ul class="title-area">
             <li class="name">
-                <h1><a href="#">Libretto Universitario</a></h1>
+            <h1><a href="#">{{site.description}}</a></h1>
             </li>
              <li class="toggle-topbar menu-icon"><a href="#"></a></li>
         </ul>
         <section class="top-bar-section">
             <ul class="right">
                 <li>
-                    <a href="#" id="aggiungiMateria">
-                        <i class="fi-plus large"></i>
-                        <span class="title-menutopbar">Aggiungi Materia</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" id="statistiche">
-                        <i class="fi-graph-pie large"></i>
-                        <span class="title-menutopbar">Statistiche</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" id="aboutMe">
-                        <i class="fi-info large"></i>
-                        <span class="title-menutopbar">Informazioni</span>
+                    <a href="{{site.url}}/about">
+                        <span class="title-menutopbar">About</span>
                     </a>
                 </li>
             </ul>
         </section>
     </nav>
     <div class="row">
-        <div class="small-12 small-centered large-12 large-centered columns" id="listone">
-            <p class="empty center">Nessuna Materia</p>
+        <div class="small-12 small-centered large-12 large-centered columns">
+            <div class="row">
+                <div class="small-12 large-6 small-centered large-centered columns">
+                    <h1><a href="{{site.url}}/">Domenico Luciani</a>|</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="small-12 large-6 small-centered large-centered columns">
+                    <h2>DLion ~ Blog</h2>
+                </div>
+            </div>
         </div>
     </div>
 
