--- a/index.html
+++ b/index.html
@@ -64,18 +64,12 @@ title: DLion ~ Blog
             </ul>
         </section>
     </nav>
-    <div class="row">
-        <div class="small-12 small-centered large-12 large-centered columns">
-            <div class="row">
-                <div class="small-12 large-6 small-centered large-centered columns">
-                    <h1><a href="{{site.url}}/">Domenico Luciani</a>|</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="small-12 large-6 small-centered large-centered columns">
-                    <h2>DLion ~ Blog</h2>
-                </div>
-            </div>
+    <div class="row text-center">
+        <div class="large-5 large-offset-1 columns" >
+            <h1 id="titoloNome"><a href="{{site.url}}/">Domenico Luciani</a></h1>
+        </div>
+        <div class="large-6 large-centered columns" >
+            <h1 id="titoloDescr" class="large-text-left">DLion ~ Blog</h1>
         </div>
     </div>
 
